--- a/FeedMe.Api/appsettings.Development.json
+++ b/FeedMe.Api/appsettings.Development.json
@@ -3,5 +3,10 @@
     "Authority": "https://feed-me-np.us.auth0.com/",
     "Audience": "https://feed-me.io/api"
   },
-  "DatabaseUri": "localhost:8000"
+  "DynamoDB": {
+    "Region": "us-east-1",
+    "ServiceUrl": "http://localhost:8000",
+    "AccessKey": "luenpb",
+    "SecretKey": "mdv0j"
+  }
 }
