--- a/FeedMe.Api/appsettings.json
+++ b/FeedMe.Api/appsettings.json
@@ -8,5 +8,9 @@
     "Authority": "#{AUTH_AUTHORITY}#",
     "Audience": "#{AUTH_AUDIENCE}#"
   },
-  "DatabaseUri": "#{DATABASE_URI}#"
+  "DynamoDB": {
+    "Region": "us-east-1",
+    "AccessKey": "#{DYNAMO_ACCESS_KEY}#",
+    "SecretKey": "#{DYNAMO_SECRET_KEY}#"
+  }
 }
