--- a/FeedMe.Api/appsettings.json
+++ b/FeedMe.Api/appsettings.json
@@ -4,6 +4,9 @@
       "Default": "Information"
     }
   },
+  "AllowOrigins": [
+    "https://feed-me.io/"
+  ],
   "Auth": {
     "Authority": "#{AUTH_AUTHORITY}#",
     "Audience": "#{AUTH_AUDIENCE}#"
