--- a/FeedMe.Api/appsettings.Development.json
+++ b/FeedMe.Api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "AllowOrigins": [
+    "http://localhost:4200/"
+  ],
   "Auth": {
     "Authority": "https://feed-me-np.us.auth0.com/",
     "Audience": "https://feed-me.io/api"
