--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,9 +60,9 @@ jobs:
           name: Run Unit Tests
           command: |
             export PATH="$PATH:/root/.dotnet/tools"
-            dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
-            dotnet tool install trx2junit --tool-path ~/tools
-            ~/tools/trx2junit --output junit-test-results */TestResults/*.trx
+            dotnet tool install trx2junit
+            dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=opencover            
+            trx2junit --output junit-test-results */TestResults/*.trx
       - store_test_results:
           path: junit-test-results
 
