Implement persistent storage for User Recipes (#32)
* Add initial scaffold

* Switch to Auth0

* route

* Fix tests

* refactor ids

* add cors

* parse user id

* Update to nosql

* Fix merge

* Fix env vars

* Wire up dynamodbo

* allow origins

* Update cors

* Remove coveralls

* Store test results

* remove coveralls

* move

* goodbye

* Local dev

Co-authored-by: jpaterson <JustinPaterson@quickenloans.com>
Co-authored-by: Justin Paterson <17819020+jjpaters@users.noreply.github.com>
Co-authored-by: Justin Paterson <JustinPaterson@rocketmortgage.com>

--- a/FeedMe.Api/FeedMe.Api.csproj
+++ b/FeedMe.Api/FeedMe.Api.csproj
@@ -11,8 +11,16 @@
     <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="7.0.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.22" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="7.2.0" />
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.5.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.28" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Controllers\Recipes\" />
+    <None Remove="Amazon.AspNetCore.Identity.Cognito" />
+    <None Remove="Amazon.Extensions.CognitoAuthentication" />
+    <None Remove="AWSSDK.CognitoIdentityProvider" />
+    <None Remove="Microsoft.AspNetCore.Authentication.JwtBearer" />
   </ItemGroup>
 </Project>
