--- a/FeedMe.Api/appsettings.Development.json
+++ b/FeedMe.Api/appsettings.Development.json
@@ -1,7 +1,15 @@
 {
-  "AWS": {
-    "Region": "us-east-2",
-    "UserPoolClientId": "",
-    "UserPoolId": ""
+  "AllowOrigins": [
+    "http://localhost:4200/"
+  ],
+  "Auth": {
+    "Authority": "https://feed-me-np.us.auth0.com/",
+    "Audience": "https://feed-me.io/api"
+  },
+  "DynamoDB": {
+    "Region": "us-east-1",
+    "ServiceUrl": "http://localhost:8000",
+    "AccessKey": "luenpb",
+    "SecretKey": "mdv0j"
   }
 }
