--- a/FeedMe.Api/appsettings.json
+++ b/FeedMe.Api/appsettings.json
@@ -4,9 +4,17 @@
       "Default": "Information"
     }
   },
-  "AWS": {
-    "Region": "#{AWS_REGION}#",
-    "UserPoolClientId": "#{AWS_USERPOOL_CLIENT_ID}#",
-    "UserPoolId": "#{AWS_USERPOOL_ID}#"
+  "AllowOrigins": [
+    "https://feed-me.io/",
+    "http://localhost:4200/"
+  ],
+  "Auth": {
+    "Authority": "#{AUTH_AUTHORITY}#",
+    "Audience": "#{AUTH_AUDIENCE}#"
+  },
+  "DynamoDB": {
+    "Region": "us-east-1",
+    "AccessKey": "#{DYNAMO_ACCESS_KEY}#",
+    "SecretKey": "#{DYNAMO_SECRET_KEY}#"
   }
 }
