--- a/FeedMe.Api/appsettings.Development.json
+++ b/FeedMe.Api/appsettings.Development.json
@@ -3,7 +3,7 @@
     "http://localhost:4200"
   ],
   "Auth": {
-    "Authority": "https://feed-me-np.us.auth0.com/",
+    "Authority": "https://feed-me-np.us.auth0.com",
     "Audience": "https://feed-me.io/api"
   },
   "DynamoDB": {
