--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
   build:
     working_directory: ~/app
     docker:
-      - image: mcr.microsoft.com/dotnet/aspnet:6.0
+      - image: mcr.microsoft.com/dotnet/sdk:6.0
     steps:
       - checkout
       - run:
@@ -50,7 +50,7 @@ jobs:
   test:
     working_directory: ~/app
     docker:
-      - image: mcr.microsoft.com/dotnet/aspnet:6.0
+      - image: mcr.microsoft.com/dotnet/sdk:6.0
     steps:
       - checkout
       - run:
