--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,13 +54,15 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Restore Project Dependencies
-          command: dotnet restore
-      - run:
           name: Run Unit Tests
           command: |
             export PATH="$PATH:/root/.dotnet/tools"
-            dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
+            dotnet tool install -g coveralls.net
+            dotnet tool install -g trx2junit
+            dotnet test --logger "trx"
+            trx2junit tests/**/TestResults/*.trx
+      - store_test_results:
+           path: tests/TestResults
 
   deploy:
     docker:
